v2.2.1: Fixed flickering on recording preview

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,13 @@
 .thumbnail {
     float: left;
     height: 51px;
-    padding: 4px;
+    padding: 0px 4px 0px 0px;
+    transition: transform .2s; /* Animation */
     width: 66px;
 }
 
 .thumbnail:hover {
-    display: inline-block;
-    height: auto;
-    position: absolute;
-    width: auto;
-    z-index: 99999;
+    transform: scale(2.0); /* (200% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .fa-disabled {
